--- a/src/components/ImageCard/ImageCard.module.css
+++ b/src/components/ImageCard/ImageCard.module.css
@@ -1,5 +1,11 @@
+
 .card {
   width: 300px;
   height: 280px;
-  background-color: white;
+  padding: 5px;
+  background-color: rgb(193, 197, 206);
+  transition: all 350ms ease-in-out;
+}
+.card:hover {
+  transform: scale(1.02);
 }
